samples/_failures_safe/1761360299_861366_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3830829d.c: In function ‘main’:
./samples/SAFE/__tmp_3830829d.c:153:5: error: expected declaration or statement at end of input
  153 |     int start, end;
      |     ^~~
